# api/docs/swagger.json
@@ -56,6 +56,46 @@
                 }
             }
         },
+        "/all/user/refresh": {
+            "post": {
+                "description": "it generates new access token",
+                "tags": [
+                    "all"
+                ],
+                "summary": "Refresh token",
+                "parameters": [
+                    {
+                        "description": "enough",
+                        "name": "token",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.Tokens"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "tokens",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid date",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error while reading from server",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/groups/add-student": {
             "post": {
                 "description": "This endpoint allows adding a student to a specific group.",
@@ -943,6 +983,86 @@
                     }
                 }
             }
+        },
+        "/products/photo/{product_id}": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete Product Photo",
+                "tags": [
+                    "user"
+                ],
+                "summary": "DeleteUserPhoto",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/photo": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Upload User Photo",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "UploadPhotoToUser",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "UploadMediaForm",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1346,6 +1466,14 @@
                 }
             }
         },
+        "user.Tokens": {
+            "type": "object",
+            "properties": {
+                "refreshtoken": {
+                    "type": "string"
+                }
+            }
+        },
         "user.UpdateProfileAdminRequest": {
             "type": "object",
             "properties": {
@@ -1379,9 +1507,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                },
-                "profile_picture": {
                     "type": "string"
                 }
             }
