# api/handler/user.go
@@ -1,15 +1,22 @@
 package handler
 
 import (
+	"context"
 	"database/sql"
 	"errors"
 	"fmt"
 	"net/http"
+	"path/filepath"
+	"strings"
 
 	"api/api/token"
+	"api/config"
 	pb "api/genproto/user"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"github.com/minio/minio-go/v7"
+	"github.com/minio/minio-go/v7/pkg/credentials"
 )
 
 // Register godoc
@@ -271,4 +278,215 @@ func (h Handler) DeleteProfile(c *gin.Context) {
 
 	h.Log.Info("DeleteProfile ended successfully")
 	c.JSON(http.StatusOK, gin.H{"message": "User profile deleted"})
+}
+
+// Refresh godoc
+// @Summary Refresh token
+// @Description it generates new access token
+// @Tags all
+// @Param token body user.Tokens true "enough"
+// @Success 200 {object} string "tokens"
+// @Failure 400 {object} string "Invalid date"
+// @Failure 500 {object} string "error while reading from server"
+// @Router /all/user/refresh [post]
+func (h Handler) Refresh(c *gin.Context) {
+	h.Log.Info("Refresh is working")
+	tok := pb.Tokens{}
+	if err := c.BindJSON(&tok); err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	}
+
+	req := pb.LoginResponse{Refresh: tok.Refreshtoken}
+
+	_, err := token.ValidateRefreshToken(req.Refresh)
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	}
+	err = token.GetUserIdFromRefreshToken(&req)
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+	}
+
+	err = token.GeneratedAccessJWTToken(&req)
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+	}
+	h.Log.Info("Refresh is succesfully ended")
+	c.JSON(http.StatusOK, gin.H{
+		"accesToken":   req.Access,
+		"refreshToken": req.Refresh,
+	})
+}
+
+// @Summary UploadPhotoToUser
+// @Security ApiKeyAuth
+// @Description Upload User Photo
+// @Tags user
+// @Accept multipart/form-data
+// @Param file formData file true "UploadMediaForm"
+// @Success 200 {object} string
+// @Failure 400 {object} string
+// @Failure 500 {object} string
+// @Router /user/photo [post]
+func (h *Handler) UploadPhotoToUser(c *gin.Context) {
+	h.Log.Info("UploadPhotoToUser called")
+
+	file, header, err := c.Request.FormFile("file")
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": "Error retrieving the file"})
+		return
+	}
+	defer file.Close()
+
+	// minio start
+
+	fileExt := filepath.Ext(header.Filename)
+	println("\n File Ext:", fileExt)
+
+	newFile := uuid.NewString() + fileExt
+	minioClient, err := minio.New(config.Load().MINIO_URL, &minio.Options{
+		Creds:  credentials.NewStaticV4("test", "minioadmin", ""),
+		Secure: false,
+	})
+	if err != nil {
+		c.AbortWithError(500, err)
+		return
+	}
+
+	info, err := minioClient.PutObject(context.Background(), "photos", newFile, file, header.Size, minio.PutObjectOptions{
+		ContentType: "image/jpeg",
+	})
+	if err != nil {
+		c.AbortWithError(500, err)
+		fmt.Println(err.Error())
+		return
+	}
+
+	policy := fmt.Sprintf(`{
+	 "Version": "2012-10-17",
+	 "Statement": [
+	  {
+	   "Effect": "Allow",
+	   "Principal": {
+		"AWS": ["*"]
+	   },
+	   "Action": ["s3:GetObject"],
+	   "Resource": ["arn:aws:s3:::%s/*"]
+	  }
+	 ]
+	}`, "photos")
+
+	err = minioClient.SetBucketPolicy(context.Background(), "photos", policy)
+	if err != nil {
+		c.AbortWithError(500, err)
+		return
+	}
+
+	madeUrl := fmt.Sprintf("http://%s/photos/%s", config.Load().MINIO_URL, newFile)
+
+	println("\n Info Bucket:", info.Bucket)
+
+	// minio end
+	accestoken := c.GetHeader("Authorization")
+	UserId, _, err := token.GetUserInfoFromAccessToken(accestoken)
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+		return
+	}
+	res, err := h.User.GetProfile(c, &pb.GetProfileRequest{Id: UserId})
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error getting user"})
+		return
+	}
+	if res.Photo == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "User has no photo"})
+		return
+	}
+	err = DeleteMinioPhoto(UserId, res.Photo)
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error deleting photo"})
+		return
+	}
+
+	req := pb.UploadPhotoRequest{
+		Id:    UserId,
+		Photo: madeUrl,
+	}
+	_, err = h.User.UploadPhoto(c, &req)
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error updating user"})
+		return
+	}
+	h.Log.Info("UploadMediaUser finished successfully")
+	c.JSON(200, gin.H{
+		"minio url": madeUrl,
+	})
+
+}
+
+// @Summary DeleteUserPhoto
+// @Security ApiKeyAuth
+// @Description Delete Product Photo
+// @Tags user
+// @Success 200 {object} string
+// @Failure 400 {object} string
+// @Failure 500 {object} string
+// @Router /products/photo/{product_id} [delete]
+func (h *Handler) DeleteUserPhoto(c *gin.Context) {
+	accestoken := c.GetHeader("Authorization")
+	UserId, _, err := token.GetUserInfoFromAccessToken(accestoken)
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+		return
+	}
+
+	res, err := h.User.GetProfile(c, &pb.GetProfileRequest{Id: UserId})
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error getting user"})
+		return
+	}
+	if res.Photo == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "User has no photo"})
+		return
+	}
+	err = DeleteMinioPhoto(UserId, res.Photo)
+	if err != nil {
+		h.Log.Error(err.Error())
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error deleting photo"})
+		return
+	}
+	h.User.DeleteProfile(c, &pb.DeleteProfileRequest{Id: UserId})
+
+	h.Log.Info("DeleteMediaProduct finished successfully")
+	c.JSON(200, gin.H{"message": "Photo deleted successfully"})
+}
+
+func DeleteMinioPhoto(user_id, photo_url string) error {
+
+	prefix := fmt.Sprintf("http://%s/photos/", config.Load().MINIO_URL)
+	bucketName := "photos"
+	objectName := strings.TrimPrefix(photo_url, prefix)
+
+	minioClient, err := minio.New(config.Load().MINIO_URL, &minio.Options{
+		Creds:  credentials.NewStaticV4("test", "minioadmin", ""),
+		Secure: false, // Set to true if using HTTPS
+	})
+	if err != nil {
+		return err
+	}
+	err = minioClient.RemoveObject(context.Background(), bucketName, objectName, minio.RemoveObjectOptions{})
+	if err != nil {
+		return err
+	}
+	return nil
 }
